# tidlers

./: .gitignore  .woodpecker.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  cliff.toml
.forgejo/workflows/: ci.yml  release.yml
.github/: copilot-instructions.md
assets/: tidal-api-oas.json
examples/hires_streamer/: Cargo.toml
examples/hires_streamer/src/: auth.rs  main.rs  save.rs  streamer.rs
examples/login_save/: Cargo.toml
examples/login_save/src/: main.rs  save.rs
examples/pkce_login/: Cargo.toml
examples/pkce_login/src/: main.rs
examples/testing_client/: Cargo.toml
examples/testing_client/src/: args.rs  auth.rs  commands.rs  main.rs  oauth_handler.rs  tracing.rs
examples/testing_client/src/commands/: activity.rs  album.rs  artist.rs  folder.rs  mix.rs  mod.rs  page.rs  pages.rs  playlist.rs  search.rs  track.rs  video.rs
examples/tidal_downloader/: .gitignore  Cargo.toml
examples/tidal_downloader/src/: args.rs  auth.rs  downloader.rs  main.rs
src/: auth.rs  config.rs  credentials.rs  error.rs  ids.rs  lib.rs  page.rs  requests.rs  resources.rs  responses.rs  session.rs  tidal.rs  urls.rs  utils.rs
src/auth/: client_credentials.rs  credentials.rs  init.rs  json.rs  mod.rs  oauth.rs  pkce.rs  token.rs
src/client/: arrival_mixes.rs  auth.rs  auth_json.rs  data.rs  logout.rs  mod.rs  oauth.rs  pkce.rs  playlist.rs  subscription.rs  tidal.rs  track.rs  user_info.rs
src/client/api/: activity.rs  album.rs  arrival_mixes.rs  artist.rs  collection.rs  feed.rs  home.rs  logout.rs  mix.rs  mixes.rs  mod.rs  openapi.rs  page.rs  pages.rs  playlist.rs  request_builder.rs  search.rs  subscription.rs  track.rs  user.rs  user_info.rs  video.rs
src/client/api/collection/: album.rs  artist.rs  favorites.rs  folder.rs  mod.rs  playlist.rs  track.rs
src/client/models/: activity.rs  album.rs  artist.rs  collection.rs  feed.rs  home.rs  media.rs  mix.rs  mixes.rs  mod.rs  page.rs  pages.rs  playback.rs  playlist.rs  responses.rs  search.rs  subscription.rs  track.rs  user.rs
src/client/models/collection/: album.rs  artist.rs  favorites.rs  folder.rs  mod.rs  playlist.rs  track.rs
src/client/models/search/: config.rs  mod.rs
src/client/models/track/: config.rs  mod.rs  playback.rs  user_uploads.rs
src/client/models/video/: config.rs  mod.rs  playback.rs
