[package]
name = "tidlers"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "examples/login_save", "examples/testing_client"]

[workspace.dependencies]
tidlers = { path = "." }

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.46.1"
url = "2.5.4"
