[package]
name = "tidlers"
version = "0.5.0"
edition = "2024"
authors = ["Tomkoid"]
description = "A Rust library for interacting with the TIDAL music streaming API"
homepage = "https://codeberg.org/tomkoid/tidlers"
repository = "https://codeberg.org/tomkoid/tidlers"
license = "MIT"
keywords = ["tidal", "music", "streaming", "api", "audio"]
categories = ["api-bindings", "multimedia::audio"]
readme = "README.md"
exclude = [
    "examples/*/target",
    ".git*",
    "*.mp4",
    "*.json",
    "downloads/",
]

[workspace]
members = [".", "examples/login_save", "examples/testing_client", "examples/hires_streamer", "examples/pkce_login"]

[workspace.dependencies]
tidlers = { path = "." }

[dependencies]
base64 = "0.22.1"
quick-xml = "0.41.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_path_to_error = "0.1.20"
sha2 = "0.11.0"
thiserror = "2.0.19"
tokio = "1.53.1"
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.53.1", features = ["rt", "macros"] }
