[package]
name = "hires-streamer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tidlers.workspace = true
color-eyre = "0.6.5"
eyre = "0.6.12"
tokio = { version = "1.46.1", features = ["full", "rt"] }
rodio = { version = "0.19.0", features = ["symphonia-all"] }
reqwest = { version = "0.12.22", features = ["stream"] }
futures-util = "0.3"
bytes = "1.9"
