[package]
name = "testing-client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tidlers.workspace = true
eyre = { version = "0.6.5", package = "color-eyre" }
tokio = { version = "1.46.1", features = ["full", "rt"] }
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.43"
